# SimpleLLM-LCEL-application

./: chatbots.ipynb  conversationq&a.ipynb  main.py  pyproject.toml  requirements.txt  serve.py  simplellmLCEL.ipynb  vectorretriever.ipynb
