[project]
name = "simplellmlcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.59",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langserve>=0.3.1",
    "python-dotenv>=1.1.0",
    "sse-starlette>=2.3.4",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
